# ContextGit

./: .cursorrules  .gitignore  .mcp.json  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  PERFORMANCE_EVALUATION.md  README.md  TASK2_HOOKS_IMPLEMENTATION_SUMMARY.md  TASK3_IMPLEMENTATION_SUMMARY.md  TASK6_WATCH_MODE_IMPLEMENTATION_SUMMARY.md  USER_GUIDE.md  prompt.md  pyproject.toml  test_imports.py  verify_performance.sh  verify_system.py
.contextgit/: requirements_index.yaml
contextgit/scanners/: __init__.py  gherkin.py
debian-package/DEBIAN/: control  postinst  prerm
design/: 01_software_architecture.md  02_detailed_design.md  03_module_specifications.md  04_test_strategy.md  05_test_cases_plan.md
docs/: 01_product_overview.md  02_user_stories.md  03_system_requirements.md  04_architecture_overview.md  05_data_model_and_file_layout.md  06_cli_specification.md  07_llm_integration_guidelines.md  08_mvp_scope_and_future_work.md
examples/: javascript_metadata_examples.js  metadata_examples.md  python_metadata_examples.py  typescript_metadata_examples.ts  watch_mode_example.md
tests/integration/: test_multiformat_scanning.py
tests/unit/domain/: test_checksum_calculator.py  test_linking_engine.py
tests/unit/handlers/: test_fmt_handler.py  test_hooks_handler.py  test_impact_handler.py  test_init_handler.py  test_link_handler.py  test_relevant_handler.py  test_show_handler.py  test_status_handler.py  test_validate_handler.py  test_watch_handler.py
tests/unit/scanners/: __init__.py  test_gherkin_scanner.py  test_javascript_scanner.py  test_markdown_scanner.py  (+2 more)
(+1 files in other folders)
